--- a/releasenotes.html
+++ b/releasenotes.html
@@ -11,13 +11,30 @@
       <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
+            <h3>0.3.2</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+            <li>測試 update</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+
+      <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
             <h3>0.3.1</h3>
           </td>
         </tr>
         <tr>
           <td>
             <ul>
-            <li>加 Check for Updates，測試自動更新</li>
+            <li>加 Check for Updates</li>
             </ul>
           </td>
         </tr>
