--- a/releasenotes.html
+++ b/releasenotes.html
@@ -8,6 +8,23 @@
 	</head>
 
 	<body>
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
+            <h3>0.3.3</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+            <li>控制自動 update 的檢查頻率（一小時一次）</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+
       <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
