--- a/releasenotes.html
+++ b/releasenotes.html
@@ -17,6 +17,23 @@
         <tr>
           <td>
             <ul>
+            <li>XL的內頁尺寸加 1mm 試試看</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
+            <h3>0.3.3</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
             <li>控制自動 update 的檢查頻率（一小時一次）</li>
             </ul>
           </td>
