--- a/releasenotes.html
+++ b/releasenotes.html
@@ -11,7 +11,28 @@
     <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
-            <h3>0.3.3</h3>
+            <h3>0.3.5</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+            <li>可新加地址</li>
+            <li>黑色書背用白色 cursor</li>
+            <li>上傳進度改成 KB, MB</li>
+            <li>修正書背厚度</li>
+            <li>Drop overlay</li>
+            <li>Preview 目前只有 XL 有，還在課綱微調中 囧</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
+            <h3>0.3.4</h3>
           </td>
         </tr>
         <tr>
