--- a/releasenotes.html
+++ b/releasenotes.html
@@ -11,6 +11,24 @@
     <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
+            <h3>0.4.0</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+            <li>加入 Sign Up</li>
+            <li>簡陋的 coupon 功能 (but it works, kind of……)</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
             <h3>0.3.7</h3>
           </td>
         </tr>
