--- a/releasenotes.html
+++ b/releasenotes.html
@@ -11,6 +11,23 @@
     <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
+            <h3>0.5.1</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+            <li>拿掉影片減少體積</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
             <h3>0.5.0</h3>
           </td>
         </tr>
