Add hypo.app 0.5.5

--- a/releasenotes.html
+++ b/releasenotes.html
@@ -17,6 +17,23 @@
         <tr>
           <td>
             <ul>
+            <li>修正中本平裝封面比例</li>
+            <li>改進 macOS Sierra 相容性</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
+            <h3>0.5.4</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
             <li>修正無標題 PDF 書本無法拖入 app 的錯誤</li>
             <li>修正書本封面某些版型下會漏白線</li>
             </ul>
