--- a/releasenotes.html
+++ b/releasenotes.html
@@ -11,7 +11,23 @@
     <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
-            <h3>0.5.4</h3>
+            <h3>0.5.6</h3>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+            <li>修正大本精裝書背換行預覽錯誤</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+      
+      <br>
+      <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+        <tr>
+          <td class="blue">
+            <h3>0.5.5</h3>
           </td>
         </tr>
         <tr>
