Add hypo.app 0.5.7

--- a/releasenotes.html
+++ b/releasenotes.html
@@ -9,6 +9,22 @@
 
 	<body>
     <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
+      <tr>
+        <td class="blue">
+          <h3>0.5.7</h3>
+        </td>
+      </tr>
+      <tr>
+        <td>
+          <ul>
+            <li>修正大本精裝書背公式</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
+
+    <br>
+    <table class="dots" width="100%" border="0" cellspacing="0" cellpadding="0" summary="Two column table with heading">
         <tr>
           <td class="blue">
             <h3>0.5.6</h3>
